welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:1: error: Missing closing brace `}' assumed here
def shareDigit(a:Int, b:Int):Boolean = {
^