welcome.lessons.welcome.bat.bool2.ShareDigit.scala.code
def shareDigit(a:Int, b:Int):Boolean = {
	var ag=0;
	var ad=0;
	var bg=0;
	var bd=0;
	ag=a/10; ad=a%10;
	bg=b/10; bd=b%10;
	if (ag==bg | ag==bd | ad==bg | ad==bd) {
		return true;
	}
	else return false;
